# UsePythonProcessDataFaster

./: .gitignore  README.md  pyproject.toml  slides.md  theme.json
assets/: example.json  example.utf-8-sig.csv  example.utf-8.csv  example_output.csv  example_output.json  hot.json
