[project]
name = "slides-environment"
version = "0.0.1"
description = ""
authors = [
    {name = "林玮 (Jade Lin)", email = "linw1995@icloud.com"},
]
dependencies = [
    "httpx~=0.19",
    "jsonpath-extractor~=0.8",
    "data-extractor~=0.10"]
requires-python = ">=3.9"
dynamic = ["classifiers"]

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
